# tinyrenderer

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  geometry.h  main.cpp  make.sh  model.cpp  model.h  our_gl.cpp  our_gl.h  runtest.sh  tgaimage.cpp  tgaimage.h
doc/: Setup VSC+WSL dev enviornment.txt  Setup VSC+WSL+Github dev enviornment.txt
